--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-react": "^7.25.1",
     "html-webpack-plugin": "^5.5.0",
-    "loader-utils": "1.2.3",
+    "loader-utils": "3.2.1",
     "mini-css-extract-plugin": "^2.6.0",
     "prettier": "^2.3.2",
     "sass": "^1.53.0",
@@ -64,12 +64,15 @@
     "typescript": "^4.5.2",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.8.1"
+    "webpack-dev-server": "^4.8.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1"
   },
   "dependencies": {
     "classnames": "^2.3.1",
     "isomorphic-style-loader": "^5.3.2",
     "js-helper": "git+https://github.com/Ainias/js-helper#0.7.10",
-    "react-bootstrap-mobile": "git+https://github.com/Ainias/react-bootstrap-mobile#0.1.6"
+    "react-bootstrap-mobile": "git+https://github.com/Ainias/react-bootstrap-mobile#0.1.6",
+    "zustand": "^4.3.5"
   }
 }
