--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-windows",
-  "version": "0.1.4",
+  "name": "@ainias42/react-windows",
+  "version": "0.1.0",
   "description": "Window Management using react",
   "main": "dist/reactWindows",
   "scripts": {
@@ -65,8 +65,7 @@
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.8.1",
-    "react-dnd": "^16.0.1",
-    "react-dnd-html5-backend": "^16.0.1"
+    "react-dnd": "^16.0.1"
   },
   "dependencies": {
     "classnames": "^2.3.1",
@@ -74,5 +73,8 @@
     "js-helper": "git+https://github.com/Ainias/js-helper#0.7.10",
     "react-bootstrap-mobile": "git+https://github.com/Ainias/react-bootstrap-mobile#0.1.6",
     "zustand": "^4.3.5"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
