--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -47,7 +47,7 @@
     "react-hooks/exhaustive-deps": [
       "warn",
       {
-        "additionalHooks": "(useDelayed|useDebounced|useDrag|useDrop)"
+        "additionalHooks": "(useDelayed|useDebounced)"
       }
     ],
     // Checks effect dependencies
