--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "node bin/build.js && webpack",
-    "update packages": "node bin/updateCopies.js"
+    "build:production": "node bin/build.js && webpack --env production",
+    "update-packages": "node bin/updateCopies.js"
   },
   "repository": {
     "type": "git",
@@ -64,8 +65,7 @@
     "typescript": "^4.5.2",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.8.1",
-    "react-dnd": "^16.0.1"
+    "webpack-dev-server": "^4.8.1"
   },
   "dependencies": {
     "classnames": "^2.3.1",
