--- a/package.json
+++ b/package.json
@@ -65,13 +65,13 @@
     "typescript": "^4.5.2",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.8.1"
+    "webpack-dev-server": "^4.8.1",
+    "@ainias42/js-helper": ">=0.7.12"
   },
   "dependencies": {
     "classnames": "^2.3.1",
     "isomorphic-style-loader": "^5.3.2",
-    "js-helper": "git+https://github.com/Ainias/js-helper#0.7.10",
-    "react-bootstrap-mobile": "git+https://github.com/Ainias/react-bootstrap-mobile#0.1.6",
+    "@ainias42/react-bootstrap-mobile": ">=0.1.8",
     "zustand": "^4.3.5"
   },
   "publishConfig": {
