--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "node bin/build.js && webpack",
     "build:production": "node bin/build.js && webpack --env production",
-    "update-packages": "node bin/updateCopies.js"
+    "update-packages": "node bin/updateCopies.js",
+    "typecheck": "tsc --noEmit"
   },
   "repository": {
     "type": "git",
@@ -27,14 +28,15 @@
   },
   "homepage": "https://github.com/Ainias/react-windows#readme",
   "peerDependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.36",
-    "@fortawesome/free-regular-svg-icons": "^5.15.4",
-    "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fortawesome/react-fontawesome": "^0.1.16",
+    "@fortawesome/fontawesome-svg-core": ">=1.2.36",
+    "@fortawesome/free-regular-svg-icons": ">=5.15.4",
+    "@fortawesome/free-solid-svg-icons": ">=5.15.4",
+    "@fortawesome/react-fontawesome": ">=0.1.16",
     "react": ">=17.0.0",
-    "react-beautiful-dnd": "^13.1.1"
+    "react-beautiful-dnd": ">=13.1.1"
   },
   "devDependencies": {
+    "@ainias42/js-helper": ">=0.7.12",
     "@babel/core": "^7.15.0",
     "@babel/plugin-proposal-class-properties": "^7.16.7",
     "@babel/plugin-transform-typescript": "^7.16.8",
@@ -65,16 +67,17 @@
     "terser-webpack-plugin": "^5.3.1",
     "ts-loader": "^9.2.9",
     "tsc": "^2.0.4",
-    "typescript": "^4.5.2",
+    "typescript": "^5.1.6",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.8.1",
-    "@ainias42/js-helper": ">=0.7.12"
+    "webpack-dev-server": "^4.8.1"
   },
   "dependencies": {
+    "@ainias42/react-bootstrap-mobile": ">=0.1.16",
     "classnames": "^2.3.1",
+    "i18next": "^23.2.6",
     "isomorphic-style-loader": "^5.3.2",
-    "@ainias42/react-bootstrap-mobile": ">=0.1.15",
+    "react-i18next": "^13.0.1",
     "zustand": "^4.3.5"
   }
 }
