--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "node bin/build.js && webpack",
     "build:production": "node bin/build.js && webpack --env production",
     "update-packages": "node bin/updateCopies.js",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "eslint": "eslint --cache \"src/{**/*,*}.{tsx,ts}\"",
+    "eslint:fix": "npm run eslint -- --fix"
   },
   "repository": {
     "type": "git",
@@ -46,17 +48,17 @@
     "@types/react": "17.0.38",
     "@types/react-beautiful-dnd": "^13.1.3",
     "@types/react-dom": "18.0.2",
-    "@typescript-eslint/eslint-plugin": "^4.30.0",
-    "@typescript-eslint/parser": "^4.30.0",
+    "@typescript-eslint/eslint-plugin": "^6.7.4",
+    "@typescript-eslint/parser": "^6.7.4",
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-airbnb-typescript": "^14.0.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-import-resolver-typescript": "^2.4.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-react": "^7.25.1",
+    "eslint": "^8.51.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.1.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-react": "^7.33.2",
     "html-webpack-plugin": "^5.5.0",
     "loader-utils": "3.2.1",
     "mini-css-extract-plugin": "^2.6.0",
@@ -73,7 +75,7 @@
     "webpack-dev-server": "^4.8.1"
   },
   "dependencies": {
-    "@ainias42/react-bootstrap-mobile": ">=0.1.18",
+    "@ainias42/react-bootstrap-mobile": ">=0.1.19",
     "classnames": "^2.3.1",
     "i18next": "^23.2.6",
     "isomorphic-style-loader": "^5.3.2",
