--- a/package.json
+++ b/package.json
@@ -39,46 +39,46 @@
   },
   "devDependencies": {
     "@ainias42/js-helper": ">=0.8.10",
-    "@babel/core": "^7.15.0",
-    "@babel/plugin-proposal-class-properties": "^7.16.7",
-    "@babel/plugin-transform-typescript": "^7.16.8",
-    "@babel/preset-env": "^7.17.10",
-    "@babel/preset-react": "^7.16.7",
-    "@babel/preset-typescript": "^7.16.7",
-    "@types/react": "17.0.38",
-    "@types/react-beautiful-dnd": "^13.1.3",
-    "@types/react-dom": "18.0.2",
-    "@typescript-eslint/eslint-plugin": "^6.7.4",
-    "@typescript-eslint/parser": "^6.7.4",
-    "babel-loader": "^8.2.5",
-    "css-loader": "^6.7.1",
-    "eslint": "^8.51.0",
+    "@babel/core": "^7.24.6",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-transform-typescript": "^7.24.6",
+    "@babel/preset-env": "^7.24.6",
+    "@babel/preset-react": "^7.24.6",
+    "@babel/preset-typescript": "^7.24.6",
+    "@types/react": "18.3.3",
+    "@types/react-beautiful-dnd": "^13.1.8",
+    "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^7.11.0",
+    "@typescript-eslint/parser": "^7.11.0",
+    "babel-loader": "^9.1.3",
+    "css-loader": "^7.1.2",
+    "eslint": "^8.57.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-typescript": "^17.1.0",
-    "eslint-config-prettier": "^9.0.0",
+    "eslint-config-airbnb-typescript": "^18.0.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-react": "^7.33.2",
-    "html-webpack-plugin": "^5.5.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-react": "^7.34.2",
+    "html-webpack-plugin": "^5.6.0",
     "loader-utils": "3.2.1",
-    "mini-css-extract-plugin": "^2.6.0",
-    "prettier": "^2.3.2",
-    "sass": "^1.53.0",
-    "sass-loader": "^12.6.0",
-    "style-loader": "^3.3.1",
-    "terser-webpack-plugin": "^5.3.1",
-    "ts-loader": "^9.2.9",
-    "typescript": "^5.2.2",
-    "webpack": "^5.72.0",
-    "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.8.1"
+    "mini-css-extract-plugin": "^2.9.0",
+    "prettier": "^3.2.5",
+    "sass": "^1.77.2",
+    "sass-loader": "^14.2.1",
+    "style-loader": "^4.0.0",
+    "terser-webpack-plugin": "^5.3.10",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.4.5",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
   },
   "dependencies": {
-    "@ainias42/react-bootstrap-mobile": ">=0.1.26",
-    "classnames": "^2.3.1",
-    "i18next": "^23.2.6",
+    "@ainias42/react-bootstrap-mobile": ">=0.2.1",
+    "classnames": "^2.5.1",
+    "i18next": "^23.11.5",
     "isomorphic-style-loader": "^5.3.2",
-    "react-i18next": "^13.0.1",
-    "zustand": "^4.3.5"
+    "react-i18next": "^14.1.2",
+    "zustand": "^4.5.2"
   }
 }
