--- a/package.json
+++ b/package.json
@@ -71,7 +71,13 @@
     "typescript": "^5.4.5",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.4"
+    "webpack-dev-server": "^5.0.4",
+    "@fortawesome/fontawesome-svg-core": ">=1.2.36",
+    "@fortawesome/free-regular-svg-icons": ">=5.15.4",
+    "@fortawesome/free-solid-svg-icons": ">=5.15.4",
+    "@fortawesome/react-fontawesome": ">=0.1.16",
+    "react": ">=17.0.0",
+    "react-beautiful-dnd": ">=13.1.1"
   },
   "dependencies": {
     "@ainias42/react-bootstrap-mobile": ">=0.2.1",
