--- a/package.json
+++ b/package.json
@@ -30,24 +30,24 @@
   },
   "homepage": "https://github.com/Ainias/react-windows#readme",
   "peerDependencies": {
-    "@fortawesome/fontawesome-svg-core": ">=1.2.36",
-    "@fortawesome/free-regular-svg-icons": ">=5.15.4",
-    "@fortawesome/free-solid-svg-icons": ">=5.15.4",
-    "@fortawesome/react-fontawesome": ">=0.1.16",
-    "react": ">=17.0.0",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-regular-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^3.0.0",
+    "react": "^19.1.1",
     "react-beautiful-dnd": ">=13.1.1"
   },
   "devDependencies": {
-    "@ainias42/js-helper": ">=0.8.15",
+    "@ainias42/js-helper": "^0.8.17",
     "@babel/core": "^7.24.6",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-transform-typescript": "^7.24.6",
     "@babel/preset-env": "^7.24.6",
     "@babel/preset-react": "^7.24.6",
     "@babel/preset-typescript": "^7.24.6",
-    "@types/react": "18.3.3",
+    "@types/react": "19.1.11",
     "@types/react-beautiful-dnd": "^13.1.8",
-    "@types/react-dom": "^18.3.0",
+    "@types/react-dom": "^19.1.7",
     "@typescript-eslint/eslint-plugin": "^7.11.0",
     "@typescript-eslint/parser": "^7.11.0",
     "babel-loader": "^9.1.3",
@@ -68,7 +68,7 @@
     "style-loader": "^4.0.0",
     "terser-webpack-plugin": "^5.3.10",
     "ts-loader": "^9.5.1",
-    "typescript": "^5.4.5",
+    "typescript": "^5.9.2",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4",
@@ -76,11 +76,11 @@
     "@fortawesome/free-regular-svg-icons": ">=5.15.4",
     "@fortawesome/free-solid-svg-icons": ">=5.15.4",
     "@fortawesome/react-fontawesome": ">=0.1.16",
-    "react": ">=17.0.0",
+    "react": "^19.1.1",
     "react-beautiful-dnd": ">=13.1.1"
   },
   "dependencies": {
-    "@ainias42/react-bootstrap-mobile": ">=0.2.1",
+    "@ainias42/react-bootstrap-mobile": "^1.0.0",
     "classnames": "^2.5.1",
     "i18next": "^23.11.5",
     "isomorphic-style-loader": "^5.3.2",
